crates/compiler/tests/parse_errors/char_end.elm
module Main exposing (..)

x = 'a
